[tool.poetry]
name = "btc-drl"
version = "0.1.0"
description = "BTC deep reinforce learning with structured and unstructured data"
authors = ["L-ING <hlf01@icloud.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
okx = {git = "https://github.com/hlf20010508/okx.git"}
pandas = "^2.2.3"
torch = "^2.5.1"
matplotlib = "^3.9.2"
stockstats = "^0.6.2"
gymnasium = "^1.0.0"
stable-baselines3 = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
